--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express_crash_course",
+  "name": "tisentat",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "asana": "^0.18.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.1",
     "moment": "^2.24.0",
+    "node-fetch": "^2.6.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
