--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "asana": "^0.18.0",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.1",
     "moment": "^2.24.0",
