--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@timberio/node": "^0.35.0",
+    "@timberio/winston": "^0.35.0",
     "asana": "^0.18.0",
     "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.1",
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
