--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "uuid": "^3.3.2",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "winston-sumologic-transport": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
